[project]
name = "discord-music-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "ffmpeg>=1.4",
    "loguru>=0.7.3",
    "pynacl>=1.6.0",
    "yt-dlp>=2025.10.22",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]
